After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 762907 - gnome-shell crashes after undocking
gnome-shell crashes after undocking
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: X11
3.19.x
Other Linux
: Normal critical
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2016-03-01 08:18 UTC by Vít Ondruch
Modified: 2016-03-29 07:25 UTC
See Also:
GNOME target: 3.20
GNOME version: ---


Attachments
Undocking log (65.78 KB, text/x-log)
2016-03-04 08:38 UTC, Vít Ondruch
Details
Undocking log (65.78 KB, text/x-log)
2016-03-04 17:01 UTC, Vít Ondruch
Details
Undocking log (97.19 KB, text/x-log)
2016-03-04 17:04 UTC, Vít Ondruch
Details
This is recent version of the log (38.00 KB, text/plain)
2016-03-08 08:32 UTC, Vít Ondruch
Details

Description Vít Ondruch 2016-03-01 08:18:33 UTC
After undocking, g-s crashes. This is the backtrace I got:

{   "signal": 5
,   "executable": "/usr/bin/gnome-shell"
,   "only_crash_thread": true
,   "stacktrace":
      [ {   "crash_thread": true
        ,   "frames":
              [ {   "address": 140457410643275
                ,   "build_id": "d0b93d32626d9a0d53dec61950a8e082b1c9368e"
                ,   "build_id_offset": 329035
                ,   "function_name": "g_logv"
                ,   "file_name": "/usr/lib64/libglib-2.0.so.0.4706.0"
                }
              , {   "address": 140457410643647
                ,   "build_id": "d0b93d32626d9a0d53dec61950a8e082b1c9368e"
                ,   "build_id_offset": 329407
                ,   "function_name": "g_log"
                ,   "file_name": "/usr/lib64/libglib-2.0.so.0.4706.0"
                }
              , {   "address": 140457428572538
                ,   "build_id": "5765c4ba37da121c7e2115dbb30afa2c38df2428"
                ,   "build_id_offset": 354682
                ,   "function_name": "_gdk_x11_display_error_event"
                ,   "file_name": "/usr/lib64/libgdk-3.so.0.1910.0"
                }
              , {   "address": 140457428629499
                ,   "build_id": "5765c4ba37da121c7e2115dbb30afa2c38df2428"
                ,   "build_id_offset": 411643
                ,   "function_name": "gdk_x_error"
                ,   "file_name": "/usr/lib64/libgdk-3.so.0.1910.0"
                }
              , {   "address": 140456872048444
                ,   "build_id": "ab3d71d876ad2fb457dbfc372d50f6288658e98b"
                ,   "build_id_offset": 34620
                ,   "function_name": "xkl_process_error"
                ,   "file_name": "/usr/lib64/libxklavier.so.16.4.0"
                }
              , {   "address": 140457387693437
                ,   "build_id": "318d2243f0c7c5428fb3bd6bd1e050ed90848c2f"
                ,   "build_id_offset": 279933
                ,   "function_name": "_XError"
                ,   "file_name": "/usr/lib64/libX11.so.6.3.0"
                }
              , {   "address": 140457387680743
                ,   "build_id": "318d2243f0c7c5428fb3bd6bd1e050ed90848c2f"
                ,   "build_id_offset": 267239
                ,   "function_name": "handle_error"
                ,   "file_name": "/usr/lib64/libX11.so.6.3.0"
                }
              , {   "address": 140457387685248
                ,   "build_id": "318d2243f0c7c5428fb3bd6bd1e050ed90848c2f"
                ,   "build_id_offset": 271744
                ,   "function_name": "_XReply"
                ,   "file_name": "/usr/lib64/libX11.so.6.3.0"
                }
              , {   "address": 140457437243878
                ,   "build_id": "bc29fe1178022849e2b7b0b9861aa794ae9c005c"
                ,   "build_id_offset": 18918
                ,   "function_name": "XRRGetOutputInfo"
                ,   "file_name": "/usr/lib64/libXrandr.so.2.2.0"
                }
              , {   "address": 140457428638896
                ,   "build_id": "5765c4ba37da121c7e2115dbb30afa2c38df2428"
                ,   "build_id_offset": 421040
                ,   "function_name": "init_multihead"
                ,   "file_name": "/usr/lib64/libgdk-3.so.0.1910.0"
                }
              , {   "address": 140457428642908
                ,   "build_id": "5765c4ba37da121c7e2115dbb30afa2c38df2428"
                ,   "build_id_offset": 425052
                ,   "function_name": "_gdk_x11_screen_size_changed"
                ,   "file_name": "/usr/lib64/libgdk-3.so.0.1910.0"
                }
              , {   "address": 140457428578065
                ,   "build_id": "5765c4ba37da121c7e2115dbb30afa2c38df2428"
                ,   "build_id_offset": 360209
                ,   "function_name": "gdk_x11_display_translate_event"
                ,   "file_name": "/usr/lib64/libgdk-3.so.0.1910.0"
                }
              , {   "address": 140457428607204
                ,   "build_id": "5765c4ba37da121c7e2115dbb30afa2c38df2428"
                ,   "build_id_offset": 389348
                ,   "function_name": "_gdk_x11_event_translator_translate"
                ,   "file_name": "/usr/lib64/libgdk-3.so.0.1910.0"
                }
              , {   "address": 140457428605841
                ,   "build_id": "5765c4ba37da121c7e2115dbb30afa2c38df2428"
                ,   "build_id_offset": 387985
                ,   "function_name": "_gdk_x11_display_queue_events"
                ,   "file_name": "/usr/lib64/libgdk-3.so.0.1910.0"
                }
              , {   "address": 140457428393884
                ,   "build_id": "5765c4ba37da121c7e2115dbb30afa2c38df2428"
                ,   "build_id_offset": 176028
                ,   "function_name": "gdk_display_get_event"
                ,   "file_name": "/usr/lib64/libgdk-3.so.0.1910.0"
                }
              , {   "address": 140457428604738
                ,   "build_id": "5765c4ba37da121c7e2115dbb30afa2c38df2428"
                ,   "build_id_offset": 386882
                ,   "function_name": "gdk_event_source_dispatch"
                ,   "file_name": "/usr/lib64/libgdk-3.so.0.1910.0"
                }
              , {   "address": 140457410615987
                ,   "build_id": "d0b93d32626d9a0d53dec61950a8e082b1c9368e"
                ,   "build_id_offset": 301747
                ,   "function_name": "g_main_context_dispatch"
                ,   "file_name": "/usr/lib64/libglib-2.0.so.0.4706.0"
                }
              , {   "address": 140457410616928
                ,   "build_id": "d0b93d32626d9a0d53dec61950a8e082b1c9368e"
                ,   "build_id_offset": 302688
                ,   "function_name": "g_main_context_iterate.isra.29"
                ,   "file_name": "/usr/lib64/libglib-2.0.so.0.4706.0"
                }
              , {   "address": 140457410617730
                ,   "build_id": "d0b93d32626d9a0d53dec61950a8e082b1c9368e"
                ,   "build_id_offset": 303490
                ,   "function_name": "g_main_loop_run"
                ,   "file_name": "/usr/lib64/libglib-2.0.so.0.4706.0"
                }
              , {   "address": 140457473351388
                ,   "build_id": "522f79e3829fbee2bea4c7f64cf4d61e6d6eed0f"
                ,   "build_id_offset": 483036
                ,   "function_name": "meta_run"
                ,   "file_name": "/usr/lib64/libmutter.so.0.0.0"
                }
              , {   "address": 94216611472743
                ,   "build_id": "d9fe5fda547f039131085477ed27aa6ff238e7e9"
                ,   "build_id_offset": 9575
                ,   "function_name": "main"
                ,   "file_name": "/usr/bin/gnome-shell"
                } ]
        } ]
}

And this is associated ABRT report:

https://retrace.fedoraproject.org/faf/reports/1031453/
Comment 1 Matthias Clasen 2016-03-01 19:30:20 UTC
putting crashes on the target list
Comment 2 Rui Matos 2016-03-03 19:43:25 UTC
Do you have the journal contents around when that happens?
Comment 3 Vít Ondruch 2016-03-04 08:38:26 UTC
Created attachment 323068 [details]
Undocking log

This is very likely the log from the time I undocked until the restart.

Please also note, that although I can log in again, the system is not really usable, since for example I cannot click by mouse in Thunderbird anymore.
Comment 4 Rui Matos 2016-03-04 14:48:09 UTC
(In reply to Vít Ondruch from comment #3)
> Created attachment 323068 [details]
> Undocking log
> 
> This is very likely the log from the time I undocked until the restart.

These are just messages from the moment the system started to reboot. The crash should be before this.
Comment 5 Vít Ondruch 2016-03-04 17:01:23 UTC
Created attachment 323110 [details]
Undocking log

Ah, sorry, not sure why I missed the relevant parts ...
Comment 6 Vít Ondruch 2016-03-04 17:04:28 UTC
Created attachment 323111 [details]
Undocking log

This time hopefully the right log ...
Comment 7 Rui Matos 2016-03-04 17:57:58 UTC
Looking more closely at the stack trace, this seems to be bug 763023. A fix for that already went in but I'm not sure it's enough since the trace here indicates we're getting an X error which means we should probably also have an error trap around that code. Yeah, XRandR is racy :-(
Comment 8 Vít Ondruch 2016-03-08 08:23:41 UTC
Is it supposed to be fixed for:

$ rpm -q gnome-shell
gnome-shell-3.19.91-1.fc25.x86_64

$ rpm -q gtk3
gtk3-3.19.11-1.fc25.x86_64
Comment 9 Vít Ondruch 2016-03-08 08:24:29 UTC
Sorry, I should explicitly say that it still crashes with the versions I mentioned in comment 8
Comment 10 Vít Ondruch 2016-03-08 08:32:39 UTC
Created attachment 323358 [details]
This is recent version of the log
Comment 11 Vít Ondruch 2016-03-08 08:37:05 UTC
Apparently, the libgdk-3 which seems to crash first has different .so name now.
Comment 12 Vít Ondruch 2016-03-08 09:13:41 UTC
BTW the "Mar 08 09:11:29 localhost org.gnome.Shell.desktop[1402]: Window manager warning: Failed to read EDID of output eDP32: Adresář nebo soubor neexistuje" can be translated as "The directory or file does not exists".
Comment 13 Rui Matos 2016-03-08 15:00:11 UTC
(In reply to Vít Ondruch from comment #8)
> $ rpm -q gtk3
> gtk3-3.19.11-1.fc25.x86_64

The fix should show up in gtk3 3.19.12 . Re-open only if you reproduce with that version when it gets released.
Comment 14 Vít Ondruch 2016-03-16 12:00:01 UTC
(In reply to Rui Matos from comment #13)
> (In reply to Vít Ondruch from comment #8)
> > $ rpm -q gtk3
> > gtk3-3.19.11-1.fc25.x86_64
> 
> The fix should show up in gtk3 3.19.12 . Re-open only if you reproduce with
> that version when it gets released.

Testing with:

$ rpm -q gtk3
gtk3-3.19.12-1.fc25.x86_64

And it does not crash after undocking, so than you for the fix.
Comment 15 Vít Ondruch 2016-03-22 08:06:44 UTC
Ok, so now it does not crash, it just completely frozen my computer :(
Comment 16 Rui Matos 2016-03-22 14:39:18 UTC
(In reply to Vít Ondruch from comment #15)
> Ok, so now it does not crash, it just completely frozen my computer :(

Please file a new bug for mutter and attach the full system log